fixes alignment 2

--- a/fico.css
+++ b/fico.css
@@ -6,7 +6,7 @@ margin: 50px auto;
 }
 
 .times_select{
-    margin-left:-210px;
+    margin-left:-220px;
 }
 #error {
     margin-left:-215px;
